--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@vercel/speed-insights": "^1.2.0",
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.2",
     "lucide-vue-next": "^0.517.0",
     "pinia": "^2.1.7",
